monitoring/discord-alertmanager-receiver.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-alertmanager-receiver
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: discord-alertmanager-receiver
  replicas: 1
  template:
    metadata:
      labels:
        app: discord-alertmanager-receiver
    spec:
      containers:
        - name: discord-alertmanager-receiver
          image: benjojo/alertmanager-discord
---

apiVersion: v1
kind: Service
metadata:
  name: discord-alertmanager-receiver-service
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: discord-alertmanager-receiver
  ports:
    - protocol: TCP
      port: 9094
      targetPort: 9094
