monitoring/alertmanager-ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.yukitsune.dev`)
      kind: Rule
      middlewares:
        - name: admin-auth
          namespace: traefik
      services:
        - name: prometheus-stack-kube-prom-alertmanager
          port: 9093
